--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,38 @@ body {
   background-color: lightblue;
   font-family: verdana;
 }
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+.tab button:hover {
+  background-color: #ddd;
+}
+
+.tab button.active {
+  background-color: #ccc;
+}
+
+
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
 
 h1 {
   color: white;
@@ -12,3 +44,4 @@ p {
   font-family: verdana;
   font-size: 20px;
 }
+
