--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@ body {
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  background-color: lightblue;
 }
 
 .tab button {
   background-color: inherit;
-  float: left;
+  float: center;
   border: none;
   outline: none;
   cursor: pointer;
@@ -20,7 +20,7 @@ body {
 }
 
 .tab button:hover {
-  background-color: #ddd;
+  background-color: blue;
 }
 
 .tab button.active {
@@ -43,5 +43,9 @@ h1 {
 p {
   font-family: verdana;
   font-size: 20px;
+}
+
+h3{
+	color: white;
 }
 
