--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
+  border: 1px solid white;
   background-color: lightblue;
 }
 
@@ -16,7 +16,7 @@ body {
   cursor: pointer;
   padding: 14px 16px;
   transition: 0.3s;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .tab button:hover {
@@ -24,14 +24,14 @@ body {
 }
 
 .tab button.active {
-  background-color: #ccc;
+  background-color: white;
 }
 
 
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
+  border: 1px solid white;
   border-top: none;
 }
 
