--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 body {
-  background-color: lightblue;
+  background-color: white;
   font-family: verdana;
 }
 .tab {
   overflow: hidden;
   border: 1px solid white;
-  background-color: lightblue;
+  background-color: white;
 }
 
 .tab button {
@@ -20,11 +20,11 @@ body {
 }
 
 .tab button:hover {
-  background-color: blue;
+  background-color: lightgrey;
 }
 
 .tab button.active {
-  background-color: white;
+  background-color: grey;
 }
 
 
@@ -36,7 +36,7 @@ body {
 }
 
 h1 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
@@ -46,6 +46,6 @@ p {
 }
 
 h3{
-	color: white;
+	color: black;
 }
 
