--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,12 @@ h1 {
   text-align: center;
 }
 
+h2 {
+	color: black;
+	text-align: center;
+	font-size: 24px;
+}
+
 p {
   font-family: Century Gothic;
   font-size: 20px;
