--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@ body {
 }
 .tab {
   overflow: hidden;
+  text-align:center;
+  width: 100%;
   border: 1px solid white;
   background-color: white;
 }
