--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,20 @@ body {
   background-color: white;
   font-family: Century Gothic;
 }
+.pill-nav {
+  text-align: center;
+  background-color: white;
+  
+}
+
 .pill-nav button {
   display: inline-block;
   color: black;
   text-align: center;
-  padding: 14px;
+  padding: 15px;
   text-decoration: none;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 .pill-nav button:hover {
