--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,13 @@ body {
 .pill-nav {
   text-align: center;
   background-color: white;
-  
+
 }
 
 .pill-nav button {
   display: inline-block;
   color: black;
+  background-color: white;
   text-align: center;
   padding: 15px;
   text-decoration: none;
