--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,31 +2,40 @@ body {
   background-color: white;
   font-family: Century Gothic;
 }
-.pill-nav {
-  text-align: center;
+.tab {
+  overflow: hidden;
+  text-align:center;
+  width: 100%;
+  border: 1px solid white;
   background-color: white;
-
 }
 
-.pill-nav button {
-  display: inline-block;
-  color: black;
-  background-color: white;
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
+.tab button {
+  background-color: inherit;
+  float: center;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-family: Century Gothic;
   font-size: 20px;
-  border-radius: 8px;
 }
 
-.pill-nav button:hover {
+.tab button:hover {
   background-color: lightgrey;
-  color: black;
 }
 
-.pill-nav button.active {
-  background-color: black;
-  color: white;
+.tab button.active {
+  background-color: grey;
+}
+
+
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid white;
+  border-top: none;
 }
 
 h1 {
@@ -35,9 +44,9 @@ h1 {
 }
 
 h2 {
-	color: black;
-	text-align: center;
-	font-size: 24px;
+  color: black;
+  text-align: center;
+  font-size: 24px;
 }
 
 p {
@@ -47,6 +56,6 @@ p {
 }
 
 h3{
-	color: black;
+  color: black;
 }
 
