--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: white;
   font-family: Century Gothic;
+  text-align:center;
+  max-width: 1000px;
 }
 .tab {
   overflow: hidden;
