--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,8 @@ body {
 }
 
 .tab button.active {
-  background-color: grey;
+  background-color: black;
+  color:white;
 }
 
 
@@ -65,6 +66,6 @@ h3{
   color: black;
   text-align: center;
   margin-top:10px;
-  margin-bottom:10px;
+  margin-bottom:20px;
 }
 
