--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,47 @@ body {
   border-top: none;
 }
 
+.box
+{
+  position: absolute;
+  top: 50%;
+  left: 50%
+  transform: translate(-50%, -50%);
+  width: 50%;
+  padding:20px;
+  box-sizing: border-box;
+  background: white;
+  border-radius: 6px;
+  box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  display: flex;
+}
+
+.box .imgBx 
+{
+  width: 10%;
+  height: auto;
+}
+
+.box .imgBx img
+{
+    max-width: 10%;
+    height: auto;
+}
+
+.box .content
+{
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 5%;
+  padding-top: 5%;
+}
+
+.box .content p
+{
+  text-align: justify;
+
+}
+
 h1 {
   margin-top: 100px;
   margin-bottom: 25px;
@@ -66,8 +107,6 @@ p {
 h3{
   color: black;
   text-align: center;
-  margin-top:10px;
-  margin-bottom:20px;
 }
 
 
