--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ body {
 
 .box .content
 {
-  padding-left: 5%;
+  padding-left: 20px;
 }
 
 .box .content h3
@@ -81,8 +81,7 @@ body {
 .box .content p
 {
   margin: 0;
-  padding-left: 0;
-  text-align: center;
+  padding-left: 10px 0 0;
 
 }
 
