--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,9 @@ body {
 .box
 {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 50%;
   padding:20px;
   box-sizing: border-box;
