--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,23 @@ body {
 {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  padding:20px;
+  box-sizing: border-box;
+  background: white;
+  border-radius: 6px;
+  box-shadow: 0 5px 15px rgba(0,0,0,.5);
+}
+
+.flex-container > div 
+{
+  background-color: white;
+  width:48%;
+  margin:auto;
 }
 
 .box
