--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ body {
 .box .imgBx img
 {
     max-width: 100%;
+    float: center;
 }
 
 .box .content
@@ -82,7 +83,7 @@ body {
 {
   margin: auto;
   padding: 5% 0 0;
-  text-align: left;
+  text-align: center;
 }
 
 h1 {
