--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,13 +77,13 @@ body {
   margin: 0;
   padding-left: 0;
   color: grey;
-
+  text-align: center;
 }
 .box .content p
 {
   margin: auto;
-  padding: 5% 0 0;
-  text-align: center;
+  padding: 0 0 0;
+  text-align: left;
 }
 
 h1 {
