--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ body {
 {
   margin-top: 5%;
   position: relative;
+  left: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
   padding:20px;
