--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ body {
   align-items: center;
   flex-direction: column;
   background-color: white;
-  margin-top: 5%;
+  margin: auto;
   max-width: 100%;
   padding:20px;
 }
