--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,6 @@ body {
   color:white;
 }
 
-
 .tabcontent {
   display: none;
   padding: 6px 12px;
@@ -50,7 +49,6 @@ body {
   padding:20px;
 }
 
-
 .box{
   left:50%;
   background-color: white;
@@ -60,12 +58,12 @@ body {
   border-radius: 6px;
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
-.box imgBx {
+.box .imgBx {
   max-width: 15% px;
     flex: 0 0 10px;
 }
 
-.box imgBx img{
+.box .imgBx img{
   max-width: 15%;
 }
 
