--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,9 @@ body {
 }
 .box .imgBx {
   max-width: 15% px;
+  padding-top: 2%;
+  padding-left:2%;
+  padding-right:2%;
     flex: 0 0 10px;
 }
 
