--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,11 +63,11 @@ body {
   padding-top: 2%;
   padding-left:2%;
   padding-right:2%;
-    flex: 0 0 10px;
+    flex: 0 0 15%;
 }
 
 .box .imgBx img{
-  max-width: 15%;
+  max-width: 100%;
 }
 
 .box .content{
