--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,12 +79,13 @@ body {
   padding-left:0;
   padding-bottom: 2%;
   color: darkgrey;
-  width:80%;
+  width:50%;
 }
 
 .box .content p{
   font-size: 18px;
   padding-bottom: 2%;
+  padding-left:0;
   margin: 0;
   width: 80%;
 }
