--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,8 +58,8 @@ body {
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .box .imgBx {
-  max-width: 100px;
-  flex: 0 0 100px;
+  max-width: 15%;
+  flex: 0 0 15%;
 }
 
 .box .imgBx img{
