--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,12 +59,12 @@ body {
 .box .imgBx {
   padding-left: 2%;
   padding-top:2%;
-  max-width: 20%;
+  width: 15%;
   flex: 0 0 20%;
 }
 
 .box .imgBx img{
-  max-width: 20%;
+  max-width: 100%;
 }
 
 .box .content{
