--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,11 +69,11 @@ body {
 
 .box .content{
   padding-left:20%;
+  margin-top:0;
 }
 
 .box .content h3{
   color: darkgrey;
-  margin-top: -20%;
 }
 
 .box .content p{
