--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,51 @@ body {
   font-size: 18px;
 }
 
+.collapsible {
+  background-color: white;
+  color: grey;
+  cursor: pointer;
+  padding: 18px;
+  margin-left:25%;
+  width: 50%;
+  border:none;
+  border-radius: 10px;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: lightgrey;
+}
+
+.collapsible:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.collapsible .active:after {
+  content: "\2212";
+}
+
+.collapsible .content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+   width:50%;
+  margin-left:25%;
+  background-color: white;
+  color: grey;
+  transition:0.5s;
+  box-sizing: border-box;
+  border-radius: 6px;
+  box-shadow: 0 5px 15px rgba(0,0,0,.5);
+}
+
 
 h1 {
   margin-top: 100px;
