--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,32 +91,19 @@ body {
   margin-left:25%;
   width: 50%;
   border:none;
+  transition:0.5s;
   border-radius: 10px;
   text-align: left;
   outline: none;
   font-size: 15px;
 }
 
-.collapsible .imgBx {
-  padding-left: 3%;
-  padding-top:3%;
-  width: 15%;
-  flex: 0 0 20%;
-}
-
-.collapsible .imgBx img{
-  max-width: 100%;
-}
-
-.collapsible button {
-  transition: 0.5s;
-}
 
 .collapsible:hover {
   background-color: lightgrey;
 }
 
-.active, .collapsible{
+.collapsible .active{
   background-color: black;
   color:white;
 }
