--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,9 +93,10 @@ body {
   border:none;
   transition:0.5s;
   border-radius: 10px;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-family: Century Gothic;
+  font-size: 20px;
 }
 
 
