--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,6 @@ body {
   float:center;
   outline: none;
   font-family: Century Gothic;
-  font-size: 20px;
 }
 
 
@@ -126,16 +125,23 @@ body {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
-   width:50%;
+  width:50%;
   margin-left:25%;
   background-color: white;
-  color: grey;
+  color: black;
   transition:0.5s;
   box-sizing: border-box;
   border-radius: 6px;
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 
+.collapsiblecontent h3{
+  color: grey;
+}
+
+.collapsiblecontent p{
+  font-size:16px;
+}
 
 h1 {
   margin-top: 100px;
