--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body {
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  transition: 0.3s;
+  transition: max-height 0.3s ease-out;
   border: 1px solid white;
   border-top: none;
 }
