--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,12 @@ body {
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  transition-delay:0.3s;
   border: 1px solid white;
   border-top: none;
+}
+
+.tablinks {
+  transition-delay:0.3s;
 }
 
 .flex-container {
