--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,11 @@ body {
   font-size: 26px;
 }
 
+.collapsiblecontent h4{
+  color: black;
+  text-align:center;
+}
+
 .collapsiblecontent p{
   font-size:16px;
   text-align:justify;
