--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ body {
   cursor: pointer;
   padding: 18px;
   margin-left:35%;
-  width: 30%;
+  width: auto;
   border:none;
   transition:0.5s;
   border-radius: 10px;
