--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ body {
   color: black;
   cursor: pointer;
   padding: 18px;
-  margin-left:35%;
+  margin-left:auto;
   width: auto;
   max-width:30%;
   border:none;
