--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,9 +88,8 @@ body {
   color: black;
   cursor: pointer;
   padding: 18px;
-  margin-left:auto;
-  width: auto;
-  max-width:30%;
+  margin-left:35%;
+  width:30%;
   border:none;
   transition:0.5s;
   border-radius: 10px;
