--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,9 +50,6 @@ body {
   max-width: 100%;
 }
 
-.flexcontainer .collapsible{
-  align-items:center;
-}
 
 .box{
   background-color: white;
@@ -92,6 +89,7 @@ body {
   color: black;
   cursor: pointer;
   padding: 18px;
+  margin-left: 35%
   width:30%;
   border:none;
   transition:0.5s;
