--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ body {
   color: black;
   cursor: pointer;
   padding: 18px;
-  margin-left: 35%
+  margin-left: 35%;
   width:30%;
   border:none;
   transition:0.5s;
