--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,7 @@ body {
   transition:0.5s;
   box-sizing: border-box;
   border-radius: 12px;
+  position:relative;
 }
 
 .collapsiblecontent h3{
