--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .box{
-  background-color: white;
+  background-color: #f1f1f1;
   margin: 10px;
   width: 50%;
   box-sizing: border-box;
