--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,18 @@ body {
   padding: 6px 12px;
   border: 1px solid white;
   border-top: none;
+  -webkit-animation: fadeEffect 1s;
+  animation: fadeEffect 2s;
+}
+
+@-webkit-keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
 
 .flex-container {
