--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,12 @@ body {
   color:white;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
 .tabcontent {
   display: none;
   padding: 6px 12px;
