--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .tab button {
-  background-color: inherit;
+  background-color: white;
   float: center;
   border: none;
   outline: none;
