--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,8 @@ body {
 .box .imgBx {
   padding-left: 3%;
   padding-top:3%;
+  padding-bottom: 5%;
   width: 15%;
-  float:center;
   flex: 0 0 20%;
 }
 
