--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ body {
 .collapsiblecontent {
   padding: 0 18px;
   max-height: 0;
+  overflow: hidden;
   transition: max-height 0.3s ease-out;
   width:50%;
   background-color: white;
@@ -135,7 +136,6 @@ body {
   transition:0.5s;
   box-sizing: border-box;
   border-radius: 12px;
-  position:relative;
 }
 
 .collapsiblecontent h3{
