--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   text-align:center;
   width: 100%;
   border: 1px solid white;
-  background-color: white;
+  background-color: inherit;
   margin-bottom: 20px;
 }
 
