--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 body {
   background-color: white;
-  font-family: Century Gothic;
 }
 .tab {
   overflow: hidden;
