--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
   border-radius: 10px;
   padding: 14px 16px;
   transition: 0.5s;
-  font-family: Century Gothic;
+  font-family: Montserrat;
   font-size: 20px;
 }
 
