--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ body {
   background-color: white;
     font-family: Montserrat;
 }
+footer {
+  background-color: inherit;
+  padding: 60px;
+}
+
 .tab {
   overflow: hidden;
   text-align:center;
