--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,7 @@ body {
   width:45%;
   padding:15px;
   height: auto;
+  margin:auto;
     display:flex;
     justify-content: center;
     align-items: center;
