--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,7 @@ body {
   padding-top:3%;
   width: 15%;
   flex: 0 0 20%;
-  align-items: center;
-  justify-content: center;
+  float: left;
   flex-wrap:wrap;
 }
 
