--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ body {
   background-color: #f1f1f1;
   margin: 10px;
   width: 50%;
+  overflow:hidden;
   box-sizing: border-box;
   border-radius: 6px;
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
