--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ body {
 .container .icon .iconBx
 {
   position:relative;
-  min-width:20%;
+  width:20%;
     cursor:pointer;
     text-align:center;
     display:flex;
