--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ body {
 {
   position:relative;
     width: auto;
-    margin:auto;
+    margin:20px;
     text-align:center;
     display:flex;
     justify-content: center;
