--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,7 @@ body {
 .container .icon
 {
   position:relative;
-    width: auto;
+    float:center;
     text-align:center;
     display:flex;
     justify-content: center;
