--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,20 +224,14 @@ body {
 {
   position:relative;
     width:50%;
-    margin:auto;
     overflow: hidden;
 }
 
 .content .contentBx
 {
   position: absolute;
-  top:600px;
-  left:26%;
-  width:48%;
-  padding:15px;
-  height: auto;
-  margin:auto;
-  margin-bottom:60px;
+  width:100%;
+  height: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
