--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,7 @@ body {
   position: absolute;
   width:100%;
   height: 100%;
+  top:600px;
     display:flex;
     justify-content: center;
     align-items: center;
