--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,16 +229,15 @@ body {
 
 .content .contentBx
 {
-  position: absolute;
+  position: relative;
   width:100%;
   height: 100%;
-  top:600px;
     display:flex;
     justify-content: center;
     align-items: center;
     transition: 0.5s;
-    transform: scale(1);
-    opacity:1;
+    transform: scale(0);
+    opacity:0;
     border-radius: 8px;
     background-color: #f1f1f1;
 }
