--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,7 @@ body {
   position: relative;
   width:100%;
   height: 100%;
+  margin:auto;
     display:flex;
     justify-content: center;
     align-items: center;
