--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,14 +225,16 @@ body {
   position:relative;
     width:50%;
     overflow: hidden;
+    margin:auto;
 }
 
 .content .contentBx
 {
-  position: relative;
-  width:100%;
-  height: 100%;
-  margin:auto;
+    position: relative;
+    width:100%;
+    height: 100%;
+    margin:auto;
+    padding:15px;
     display:flex;
     justify-content: center;
     align-items: center;
