--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ body {
 
 .content .contentBx
 {
-    position: relative;
+    position: absolute;
     width:auto;
     height: auto;
     margin:auto;
