--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,9 +87,9 @@ body {
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .box .imgBx {
+  padding:3%;
   width: 25%;
-  margin:auto;
-  flex: 0 0 10%;
+  display: flex;
   float: left;
   flex-wrap:wrap;
 }
