--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,10 +87,10 @@ body {
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .box .imgBx {
-  padding:3%;
   width: 25%;
   display: flex;
   float: left;
+  justify-content: justify;
   flex-wrap:wrap;
 }
 
