--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ body {
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .box .imgBx {
-  padding:3%;
+  padding-left:3%;
   width: 30%;
   display: flex;
   float: left;
