--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ body {
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .box .imgBx {
-  padding-left:3%;
+  padding:3%;
   width: 30%;
   display: flex;
   float: left;
@@ -102,7 +102,7 @@ body {
 
 .box .content{
   overflow:hidden;
-  margin: auto;
+  margin:3%;
   justify-content: justify;
 
 }
