--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,3 +283,86 @@ p.main {
   padding-left:25%;
   width:50%;
 }
+
+.skill{
+  width: 50%;
+    margin: auto;
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+.skills li {
+  margin: 20px 0;
+}
+
+.bar{
+  background: #353b48;
+    display: block;
+    height: 20px;
+    border: 2px solid rgba(0,0,0,0.3);
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 0 10px #2187e7b3;
+}
+
+.bar span{
+  height: 20px;
+    float: left;
+    background: white;
+}
+
+.test1{
+  width:90%;
+    animation: test1 2s;
+}
+
+.test2{
+  width:65%;
+    animation: test2 2s;
+}
+
+.test3{
+  width:70%;
+    animation: test3 2s;
+}
+
+.test4{
+  width:50%;
+    animation: test4 2s;
+}
+
+@keyframes test1{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 90%;
+    }
+}
+
+@keyframes test2{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 65%;
+    }
+}
+
+@keyframes test3{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 70%;
+    }
+}
+
+@keyframes test4{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 50%;
+    }
+}
