--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,23 @@ body {
 {
     text-align: center;
 }
+.bar{
+  background: white;
+    display:block;
+    height: 10px;
+    width:400px;
+    margin:auto;
+    border: 2px solid rgba(0,0,0,0.3);
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 0 10px grey;
+}
+
+.bar span{
+  height: 10px;
+    float: left;
+    background: grey;
+}
 
 h1 {
   margin-top: 25px;
@@ -284,3 +301,134 @@ p.main {
   width:50%;
 }
 
+.french{
+  width:100%;
+    animation: french 2s;
+}
+
+.english{
+  width:100%;
+    animation: english 2s;
+}
+
+.spanish{
+  width:90%;
+    animation: spanish 2s;
+}
+
+.portuguese{
+  width:80%;
+    animation: portuguese 2s;
+}
+
+.italian{
+  width:50%;
+    animation: italian 2s;
+}
+
+.russian{
+  width:30%;
+    animation: russian 2s;
+}
+
+.excel{
+  width:80%;
+    animation: russian 2s;
+}
+
+.powerpoint{
+  width:90%;
+    animation: russian 2s;
+}
+
+.word{
+  width:100%;
+    animation: russian 2s;
+}
+
+.VBA{
+  width:50%;
+    animation: russian 2s;
+}
+
+@keyframes french{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 100%;
+    }
+}
+@keyframes english{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 100%;
+    }
+}
+@keyframes spanish{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 90%;
+    }
+}
+@keyframes portuguese{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 80%;
+    }
+}
+@keyframes italian{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 50%;
+    }
+}
+@keyframes russian{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 30%;
+    }
+}
+
+@keyframes excel{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 80%;
+    }
+}
+@keyframes powerpoint{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 90%;
+    }
+}
+@keyframes word{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 100%;
+    }
+}
+@keyframes VBA{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 50%;
+    }
+}
