--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ body {
   background: white;
     display:block;
     height: 10px;
-    width:80%;
+    width:500px;
     margin:auto;
     border: 2px solid rgba(0,0,0,0.3);
     border-radius: 5px;
