--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body {
   border-radius: 10px;
   padding: 14px 16px;
   transition: 0.5s;
+  z-index:6;
   font-family: Montserrat;
   font-size: 20px;
 }
