--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,6 +384,41 @@ p.main {
     animation: statsmodels 2s;
 }
 
+.sql{
+  width:90%;
+  animation: sql 2s;
+}
+
+.html{
+  width:50%;
+  animation: html 2s;
+}
+
+.css{
+  width:40%;
+  animation: css 2s;
+}
+
+.javascript{
+  width:30%;
+  animation: javascript 2s;
+}
+
+.cplusplus{
+  width:30%;
+  animation: cplusplus 2s;
+}
+
+.rstudio{
+  width:80%;
+  animation: rstudio 2s;
+}
+
+.matlab{
+  width:60%;
+  animation: matlab 2s;
+}
+
 @keyframes french{
   0%{
       width: 0%;
@@ -529,6 +564,69 @@ p.main {
 }
 
 @keyframes statsmodels{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 60%;
+    }
+}
+
+@keyframes sql{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 90%;
+    }
+}
+
+@keyframes html{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 50%;
+    }
+}
+
+@keyframes css{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 40%;
+    }
+}
+
+@keyframes javascript{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 30%;
+    }
+}
+
+@keyframes cplusplus{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 30%;
+    }
+}
+
+@keyframes rstudio{
+  0%{
+      width: 0%;
+    }
+    100%{
+      width: 80%;
+    }
+}
+
+@keyframes matlab{
   0%{
       width: 0%;
     }
