--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,8 @@ body {
     display:block;
     height: 10px;
     width:480px;
+    padding-left:5%;
+    padding-right:5%;
     margin:auto;
     border: 2px solid rgba(0,0,0,0.3);
     border-radius: 5px;
