--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ body {
 }
 .box .imgBx {
   padding:3%;
-  width: 30%;
+  max-width: 20%;
   display: flex;
   float: left;
   justify-content: justify;
