--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ body {
 
 .box .content h2{
   color: darkgrey;
-  font-family: Montserrat;
+  font-family: Century Gothic;
 }
 
 .box .content p{
