--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ body {
   font-family: Montserrat;
 }
 
-.collapsible button.active{
+.collapsible button:active{
   background-color: black;
   color:white;
 }
