--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,10 @@ body {
   background-color: lightgrey;
 }
 
+.collapsible button.active{
+  background-color: black;
+  color:white;
+}
 
 .collapsiblecontent {
   padding: 0 18px;
