--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ body {
   background-color: lightgrey;
 }
 
-.collapsible.active button.active{
+.collapsible.active {
   background-color: black;
   color:white;
 }
