--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,9 @@ body {
   box-sizing: border-box;
   border-radius: 12px;
 }
-
+.collapsiblecontent button:hover {
+  background-color: lightgrey;
+}
 .collapsiblecontent h3{
   color: black;
   text-align:center;
