--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,11 +137,17 @@ body {
   background-color: lightgrey;
 }
 
-.collapsible:active {
+/*.collapsible:active {
   background-color: black;
   color:white;
+}*/
+.button.collapsible:hover {
+  background-color: #f1f1f1;
 }
 
+.button.collapsible:hover {
+  background-color: lightgrey;
+}
 .collapsiblecontent {
   padding: 0 18px;
   max-height: 0;
