--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2266,7 +2266,7 @@ input, select, textarea {
 
 	#main {
 		position: relative;
-		background: #5D5D5D url("images/bg02.png");
+		background: #272727 url("images/bg02.png");
 		padding: 4em 0 4em 0;
 	}
 
@@ -2283,7 +2283,7 @@ input, select, textarea {
 		}
 
 		#main .major h2 {
-			background: #f7f7f7 url("images/bg02.png");
+			background: #a5a5a5 url("images/bg02.png");
 		}
 
 /* Footer */
