--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2066,7 +2066,7 @@ input, select, textarea {
 
 	#header {
 		position: relative;
-		background: #ffffff;
+		background: #272727;
 		border-bottom: solid 1px #ccc;
 		padding: 5em 0 4em 0;
 		text-align: center;
@@ -2290,7 +2290,7 @@ input, select, textarea {
 
 	#footer {
 		position: relative;
-		color: #858484;
+		color: #272727;
 		padding: 4em 0;
 	}
 
