--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1536,7 +1536,7 @@ input, select, textarea {
 		}
 
 	header {
-		margin: 0 0 1.5em 0;
+		margin: 0 0 0 0; /* third value is 1.5 em*/
 	}
 
 		header > p {
