--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1536,7 +1536,7 @@ input, select, textarea {
 		}
 
 	header {
-		margin: 0 0 0 0; /* third value is 1.5 em*/
+		margin: 0 0 1.5em 0; 
 	}
 
 		header > p {
@@ -1549,7 +1549,7 @@ input, select, textarea {
 		header.major {
 			position: relative;
 			text-align: center;
-			border-top: solid 1px #ccc;
+			/*border-top: solid 1px #ccc;*/
 			top: 1em;
 			margin: 0 0 3em 0;
 		}
