--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2268,7 +2268,7 @@ input, select, textarea {
 	#main {
 		position: relative;
 		background: #272727 url("images/bg02.png");
-		padding: 4em 0 4em 0;
+		padding: 0 0 4em 0;
 	}
 
 		#main:before {
