--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,6 +135,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #FFFFFF;
+		border-radius: 8px;
 		font-weight: 700;
 	}
 
@@ -1458,7 +1459,7 @@ input, select, textarea {
 		border: 0;
 		padding: 0.75em 1em;
 		font-size: 1em;
-		border-radius: 5px;
+		border-radius: 8px;
 		border: solid 1px #dddddd;
 		background: #fff;
 		width: 100%;
@@ -1572,6 +1573,7 @@ input, select, textarea {
 	.box {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
+		border-radius: 10px;
 		padding: 2.75em 1.75em 2.75em 1.75em;
 	}
 
@@ -1603,6 +1605,10 @@ input, select, textarea {
 		}
 
 		.box h3{
+			color:black;
+		}
+
+		.box h2{
 			color:black;
 		}
 
