--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2917,3 +2917,479 @@ input, select, textarea {
 			}
 
 	}
+
+	/* Skills */
+
+	.french{
+		width:100%;
+		  animation: french 2s;
+	  }
+	  
+	  .english{
+		width:100%;
+		  animation: english 2s;
+	  }
+	  
+	  .spanish{
+		width:90%;
+		  animation: spanish 2s;
+	  }
+	  
+	  .portuguese{
+		width:80%;
+		  animation: portuguese 2s;
+	  }
+	  
+	  .italian{
+		width:50%;
+		  animation: italian 2s;
+	  }
+	  
+	  .russian{
+		width:30%;
+		  animation: russian 2s;
+	  }
+	  
+	  .excel{
+		width:85%;
+		  animation: excel 2s;
+	  }
+	  
+	  .powerpoint{
+		width:100%;
+		  animation: powerpoint 2s;
+	  }
+	  
+	  .word{
+		width:100%;
+		  animation: word 2s;
+	  }
+	  
+	  .VBA{
+		width:50%;
+		  animation: VBA 2s;
+	  }
+	  
+	  .python{
+		width:60%;
+		  animation: python 2s;
+	  }
+	  .numpy{
+		width:85%;
+		  animation: numpy 2s;
+	  }
+	  .pandas{
+		width:90%;
+		  animation: pandas 2s;
+	  }
+	  .scipy{
+		width:55%;
+		  animation: scipy 2s;
+	  }
+	  .matplotlib{
+		width:85%;
+		  animation: matplotlib 2s;
+	  }
+	  .seaborn{
+		width:70%;
+		  animation: seaborn 2s;
+	  }
+	  .scikitlearn{
+		width:40%;
+		  animation: scikitlearn 2s;
+	  }
+	  .statsmodels{
+		width:75%;
+		  animation: statsmodels 2s;
+	  }
+	  
+	  .sql{
+		width:90%;
+		animation: sql 2s;
+	  }
+	  
+	  .html{
+		width:50%;
+		animation: html 2s;
+	  }
+	  
+	  .css{
+		width:40%;
+		animation: css 2s;
+	  }
+	  
+	  .javascript{
+		width:30%;
+		animation: javascript 2s;
+	  }
+	  
+	  .cplusplus{
+		width:60%;
+		animation: cplusplus 2s;
+	  }
+	  
+	  .rstudio{
+		width:80%;
+		animation: rstudio 2s;
+	  }
+	  
+	  .matlab{
+		width:60%;
+		animation: matlab 2s;
+	  }
+	  
+	  .lua{
+		width:85%;
+		animation: lua 2s;
+	  }
+	  
+	  .csharp{
+		width:80%;
+		animation: Csharp 2s;
+	  }
+	  
+	  .C{
+		width:70%;
+		animation: C 2s;
+	  }
+	  
+	  @keyframes french{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 100%;
+		  }
+	  }
+	  @keyframes english{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 100%;
+		  }
+	  }
+	  @keyframes spanish{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 90%;
+		  }
+	  }
+	  @keyframes portuguese{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 80%;
+		  }
+	  }
+	  @keyframes italian{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 50%;
+		  }
+	  }
+	  @keyframes russian{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 30%;
+		  }
+	  }
+	  
+	  @keyframes excel{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 85%;
+		  }
+	  }
+	  @keyframes powerpoint{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 100%;
+		  }
+	  }
+	  @keyframes word{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 100%;
+		  }
+	  }
+	  @keyframes VBA{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 50%;
+		  }
+	  }
+	  @keyframes python{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 60%;
+		  }
+	  }
+	  
+	  @keyframes numpy{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 85%;
+		  }
+	  }
+	  
+	  @keyframes pandas{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 90%;
+		  }
+	  }
+	  
+	  @keyframes scipy{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 55%;
+		  }
+	  }
+	  
+	  @keyframes matplotlib{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 85%;
+		  }
+	  }
+	  
+	  @keyframes seaborn{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 70%;
+		  }
+	  }
+	  
+	  @keyframes scikitlearn{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 40%;
+		  }
+	  }
+	  
+	  @keyframes statsmodels{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 75%;
+		  }
+	  }
+	  
+	  @keyframes sql{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 90%;
+		  }
+	  }
+	  
+	  @keyframes html{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 50%;
+		  }
+	  }
+	  
+	  @keyframes css{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 40%;
+		  }
+	  }
+	  
+	  @keyframes javascript{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 30%;
+		  }
+	  }
+	  
+	  @keyframes cplusplus{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 60%;
+		  }
+	  }
+	  
+	  @keyframes rstudio{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 80%;
+		  }
+	  }
+	  
+	  @keyframes matlab{
+		0%{
+			width: 0%;
+		  }
+		  100%{
+			width: 60%;
+		  }
+	  }
+	  
+	  @keyframes lua{
+		0%{
+		  width: 0%;
+		}
+		100%{
+		  width: 85%;
+		}
+	  }
+	  
+	  @keyframes C{
+		0%{
+		  width: 0%;
+		}
+		100%{
+		  width: 70%;
+		}
+	  }
+	  
+	  @keyframes Csharp{
+		0%{
+		  width: 0%;
+		}
+		100%{
+		  width: 80%;
+		}
+	  }
+
+	  /* Style Additions for Skills page */
+	  .bar{
+		background: rgb(221, 221, 221);
+		  display:block;
+		  height: 18px;
+		  width: 400px;
+		  margin:auto;
+		  border: 2px solid rgba(0,0,0,0.3);
+		  border-radius: 10px;
+		  overflow: hidden;
+		  box-shadow: 0 0 10px grey;
+	  }
+	  
+	  .bar span{
+		height: 18px;
+		  float: left;
+		  background: rgb(175, 2, 2);
+	  }
+
+	  .container .icon
+		{
+		position:relative;
+		margin:auto;
+			text-align:center;
+			display:flex;
+			justify-content: center;
+			align-items: center;
+			padding-bottom: 3%;
+		}
+
+		.container .icon .iconBx
+		{
+			position:relative;
+			width:25%;
+			cursor:pointer;
+			text-align:center;
+			display:flex;
+			padding: 10px;
+			justify-content: center;
+			flex-wrap: wrap;
+			align-items: center;
+			filter:grayscale(1);
+			transition:0.5s;
+			transform: scale(0.8);
+			color: rgb(192, 192, 192);
+			border-radius: 8px;
+			background-color: rgb(131, 131, 131);
+			
+
+		}
+
+		.container .icon .iconBx:hover
+		{
+			filter:grayscale(0);
+			transition:0.5s;
+			transform: scale(1);
+			
+		}
+
+		.container .icon .iconBx.active
+		{
+			filter:grayscale(0);
+			transition:0.5s;
+			transform: scale(1);
+			background-color: rgb(175, 2, 2);
+			
+		}
+
+		.content
+		{
+		position:relative;
+			width:100%;
+			margin:auto;
+		}
+
+		.content .contentBx
+		{
+			position: absolute;
+			width:100%;
+			height: auto;
+			
+			padding:5%;
+			display:flex;
+			justify-content: center;
+			align-items: center;
+			transition: 0.5s;
+			transform: scale(0);
+			opacity:0;
+			border-radius: 10px;
+			background-color: white;
+		}
+
+		.content .contentBx.active
+		{
+			transform: scale(1);
+			opacity:1;
+		}
